# aws-account-migration-example

./: .gitignore  Architecture.drawio  CONCIERGE.md  README.md  accept-invitation-role.yml  pyproject.toml
aws_account_migration_example/: __init__.py  aws.py  model.py  validator.py
aws_account_migration_example/runtime/: aws.py  migrate.py  model.py  validator.py
aws_account_migration_example/tests/: __init__.py  test_model.py
aws_account_migration_example/tests/.pytest_cache/: CACHEDIR.TAG
aws_account_migration_example/tests/mocks/aws/: mock_aws.py
