[tool.poetry]
name = "aws-account-migration-example"
version = "0.1.0"
description = "Example script from migrating all accounts from one AWS Organization to another"
authors = ["Galen Dunkleberger <awsgalen@amazon.com>"]
license = "MIT-0"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.24"
prompt-toolkit = "^3.0.36"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpretty = "^1.1.4"
moto = "^4.1.1"
decorator = "^5.1.1"
pytz = "^2022.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
migrate = "aws_account_migration_example.runtime.migrate:main"